RESOLVED FIXED Bug 191583
Various compiler warnings/errors fixes.
https://bugs.webkit.org/show_bug.cgi?id=191583
Summary Various compiler warnings/errors fixes.
Charlie Turner
Reported 2018-11-13 02:08:09 PST
Various compiler warnings/errors fixes.
Attachments
Patch (6.80 KB, patch)
2018-11-13 02:11 PST, Charlie Turner
no flags
Patch (6.80 KB, patch)
2018-11-13 03:40 PST, Charlie Turner
no flags
Patch (5.48 KB, patch)
2018-11-13 03:46 PST, Charlie Turner
no flags
Patch for landing (5.48 KB, patch)
2018-11-13 05:58 PST, Charlie Turner
no flags
Charlie Turner
Comment 1 2018-11-13 02:11:29 PST
Charlie Turner
Comment 2 2018-11-13 02:13:15 PST
The build errors came from https://bugs.webkit.org/show_bug.cgi?id=90342, in release+logging configurations, the others were some warnings I noticed in a wayland upgrade.
Charlie Turner
Comment 3 2018-11-13 02:24:26 PST
I had a dirty jhbuild for the wayland related changes, rebuilding that here to check the EWS failure.
Frédéric Wang (:fredw)
Comment 4 2018-11-13 02:29:03 PST
Comment on attachment 354661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354661&action=review > Source/WebCore/rendering/RenderLayerCompositor.cpp:654 > #endif I think the !LOG_DISABLED is for compositingLogEnabled() and ENABLE(TREE_DEBUGGING) for showPaintOrderTree. Does ENABLE(TREE_DEBUGGING) imply !LOG_DISABLED? > Source/WebCore/rendering/RenderLayerCompositor.cpp:730 > showPaintOrderTree(m_renderView.layer()); Ditto. > Source/WebCore/rendering/RenderLayerCompositor.cpp:765 > +#if ENABLE(TREE_DEBUGGING) Ditto. > Source/WebCore/rendering/RenderLayerCompositor.cpp:788 > +#endif Shouldn't it be #if !LOG_DISABLED if (compositingLogEnabled()) LOG(Compositing, ...) #endif ? > Source/WebCore/rendering/RenderLayerCompositor.cpp:1003 > +#endif Ditto. > Source/WebCore/rendering/RenderLayerCompositor.cpp:1019 > +#endif Ditto. > Tools/wpe/backends/WindowViewBackend.cpp:384 > + [](void*, struct wl_touch*, int32_t, wl_fixed_t) { } The WPE bot does not seem to like this... Apparently there was a trailing comma in the previous code.
Charlie Turner
Comment 5 2018-11-13 02:48:15 PST
Comment on attachment 354661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354661&action=review >> Source/WebCore/rendering/RenderLayerCompositor.cpp:654 >> #endif > > I think the !LOG_DISABLED is for compositingLogEnabled() and ENABLE(TREE_DEBUGGING) for showPaintOrderTree. > Does ENABLE(TREE_DEBUGGING) imply !LOG_DISABLED? TREE_DEBUGGING -> !NDEBUG -> !ASSERTIONS_DISABLED_DEFAULT -> !LOG_DISABLED from my analysis. >> Source/WebCore/rendering/RenderLayerCompositor.cpp:788 >> +#endif > > Shouldn't it be > > #if !LOG_DISABLED > if (compositingLogEnabled()) > LOG(Compositing, ...) > #endif > > ? That seems more robust. I was relying on compositingState.depth only being defined in TREE_DEBUGGING mode, so this checked seemed reasonable. Will update to your suggestion. >> Tools/wpe/backends/WindowViewBackend.cpp:384 >> + [](void*, struct wl_touch*, int32_t, wl_fixed_t) { } > > The WPE bot does not seem to like this... Apparently there was a trailing comma in the previous code. Strange that my compiler didn't mind it :/ seems other inline structures in this file don't need the trailing comma, will double check here.
Charlie Turner
Comment 6 2018-11-13 03:36:44 PST
Comment on attachment 354661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354661&action=review >>> Source/WebCore/rendering/RenderLayerCompositor.cpp:788 >>> +#endif >> >> Shouldn't it be >> >> #if !LOG_DISABLED >> if (compositingLogEnabled()) >> LOG(Compositing, ...) >> #endif >> >> ? > > That seems more robust. I was relying on compositingState.depth only being defined in TREE_DEBUGGING mode, so this checked seemed reasonable. Will update to your suggestion. Actually, that doesn't work properly. The issue is RenderLayerCompositor::CompositingState.depth is not defined when not building in TREE_DEBUGGING, so accessing it without this guard is incorrect.
Charlie Turner
Comment 7 2018-11-13 03:40:49 PST
Created attachment 354662 [details] Patch Add trailing comma to see if it helps the EWS bots in the wayland part of the patch. Can't reproduce that build failure locally with an updated jhbuild.
Charlie Turner
Comment 8 2018-11-13 03:46:18 PST
Created attachment 354663 [details] Patch There must be something out of sync with the trunk jhbuild and the wpe bot's jhbuild, rolling out the local warning fix.
Charlie Turner
Comment 9 2018-11-13 05:58:28 PST
Created attachment 354664 [details] Patch for landing
WebKit Commit Bot
Comment 10 2018-11-13 06:35:30 PST
Comment on attachment 354664 [details] Patch for landing Clearing flags on attachment: 354664 Committed r238130: <https://trac.webkit.org/changeset/238130>
WebKit Commit Bot
Comment 11 2018-11-13 06:35:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2018-11-13 06:36:22 PST
Note You need to log in before you can comment on or make changes to this bug.