Various compiler warnings/errors fixes. https://bugs.webkit.org/show_bug.cgi?id=191583

Reviewed by Frédéric Wang.

* Modules/indexeddb/server/MemoryIDBBackingStore.cpp:
(WebCore::IDBServer::MemoryIDBBackingStore::clearObjectStore):
ASSERT is only compiled in DEBUG mode, so guarding with
!LOG_DISABLED is wrong.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateCompositingLayers):
showPaintOrderTree is only compiled in ENABLE(TREE_DEBUGGING)
mode, so guarding with !LOG_DISABLED was wrong.
(WebCore::RenderLayerCompositor::computeCompositingRequirements):
Ditto, this time with member .depth.
(WebCore::RenderLayerCompositor::traverseUnchangedSubtree): Ditto.
* rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::styleChanged): Add another unused
parameter.


Canonical link: https://commits.webkit.org/206339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238130 268f45cc-cd09-0410-ab3c-d52691b4dbfc